# test_task_drf

./: .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: workflow.yml
api/: serializers.py  services.py  urls.py  views.py
catalog/: models.py
catalog/migrations/: 0001_initial.py  0002_data_migrations.py
config/: settings.py  urls.py
data/: albums.json  albums_tracks.json  artists.json  tracks.json
infra/: docker-compose.yml
tests/: factories.py  test_album.py  test_artist.py  test_factory.py  test_models.py  test_track.py  test_urls.py  utils.py
